Bug 1464571 - fixes DOM Worker performance counters - r=baku,froydnj

Now uses StaticPrefs instead of DOMPrefs, and how we count dispatches for Workers.

MozReview-Commit-ID: DTumwcI5bG