xpcom/tests/gtest/TestThreadMetrics.cpp
@@ -9,12 +9,14 @@
 #include "mozilla/AbstractThread.h"
 #include "mozilla/Preferences.h"
 #include "mozilla/dom/DocGroup.h"
+#include "mozilla/dom/DOMPrefs.h"
 #include "mozilla/dom/TabGroup.h"
 #include "mozilla/SchedulerGroup.h"
 #include "mozilla/TaskCategory.h"
 #include "mozilla/PerformanceCounter.h"
 #include "nsThreadUtils.h"
 #include "nsServiceManagerUtils.h"
+#include "nsThread.h"
 
 using namespace mozilla;
 using mozilla::Runnable;
@@ -48,20 +50,20 @@ class TimedRunnable final : public Runnable
 {
 public:
   explicit TimedRunnable(uint32_t aExecutionTime1, uint32_t aExecutionTime2,
-                         bool aRecursive)
+                         uint32_t aSubExecutionTime)
     : Runnable("TimedRunnable")
     , mExecutionTime1(aExecutionTime1)
     , mExecutionTime2(aExecutionTime2)
-    , mRecursive(aRecursive)
+    , mSubExecutionTime(aSubExecutionTime)
   {
   }
   NS_IMETHODIMP Run()
   {
     PR_Sleep(PR_MillisecondsToInterval(mExecutionTime1 + 5));
-    if (mRecursive) {
+    if (mSubExecutionTime > 0) {
       // Dispatch another runnable so nsThread::ProcessNextEvent is called recursively
       nsCOMPtr<nsIThread> thread = do_GetMainThread();
-      nsCOMPtr<nsIRunnable> runnable = new TimedRunnable(155, 0, false);
+      nsCOMPtr<nsIRunnable> runnable = new TimedRunnable(mSubExecutionTime, 0, 0);
       thread->Dispatch(runnable, NS_DISPATCH_NORMAL);
       (void)NS_ProcessNextEvent(thread, false);
     }
@@ -69,9 +71,9 @@ public:
     return NS_OK;
   }
 private:
-  uint32_t                    mExecutionTime1;
-  uint32_t                    mExecutionTime2;
-  bool                        mRecursive;
+  uint32_t mExecutionTime1;
+  uint32_t mExecutionTime2;
+  uint32_t mSubExecutionTime;
 };
 
 
@@ -104,24 +106,37 @@ protected:
     mDispatchCount = (uint32_t)TaskCategory::Other + 1;
   }
 
-  virtual void TearDown() {
+  void resetCounters() {
     // let's reset the counters
     mCounter->ResetPerformanceCounters();
     for (uint32_t i = 0; i < mDispatchCount; i++) {
       ASSERT_EQ(mCounter->GetDispatchCounter()[i], 0u);
     }
     ASSERT_EQ(mCounter->GetExecutionDuration(), 0u);
+  }
+
+  virtual void TearDown() {
+    // let's reset the counters
+    resetCounters();
+
     // and remove the document from the doc group (actually, a nullptr)
     mDocGroup->RemoveDocument(nullptr);
     mDocGroup = nullptr;
     Preferences::SetBool(prefKey, mOldPref);
+    ProcessAllEvents();
+  }
+
+  // this is used to get rid of transient events
+  void initScheduler() {
+    ProcessAllEvents();
   }
 
   nsresult Dispatch(uint32_t aExecutionTime1, uint32_t aExecutionTime2,
-                    bool aRecursive) {
+                    uint32_t aSubExecutionTime) {
+    ProcessAllEvents();
     nsCOMPtr<nsIRunnable> runnable = new TimedRunnable(aExecutionTime1,
                                                        aExecutionTime2,
-                                                       aRecursive);
+                                                       aSubExecutionTime);
     runnable = new SchedulerGroup::Runnable(runnable.forget(),
                                             mSchedulerGroup, mDocGroup);
     return mDocGroup->Dispatch(TaskCategory::Other, runnable.forget());
@@ -144,9 +159,10 @@ protected:
 TEST_F(ThreadMetrics, CollectMetrics)
 {
   nsresult rv;
+  initScheduler();
 
-  // Dispatching a runnable that will last for +100ms
-  rv = Dispatch(100, 0, false);
+  // Dispatching a runnable that will last for +50ms
+  rv = Dispatch(25, 25, 0);
   ASSERT_TRUE(NS_SUCCEEDED(rv));
 
   // Flush the queue
@@ -164,8 +180,8 @@ TEST_F(ThreadMetrics, CollectMetrics)
 
   // Did we get incremented in the docgroup ?
   uint64_t duration = mCounter->GetExecutionDuration();
-  ASSERT_GE(duration, 100000u);
-  ASSERT_LT(duration, 150000u);
+  ASSERT_GE(duration, 50000u);
+  ASSERT_LT(duration, 200000u);
 }
 
 
@@ -173,9 +189,11 @@ TEST_F(ThreadMetrics, CollectRecursiveMetrics)
 {
   nsresult rv;
 
-  // Dispatching a runnable that will last for +100ms
-  // and run another one recursively
-  rv = Dispatch(50, 50, true);
+  initScheduler();
+
+  // Dispatching a runnable that will last for +50ms
+  // and run another one recursively that lasts for 200ms
+  rv = Dispatch(25, 25, 200);
   ASSERT_TRUE(NS_SUCCEEDED(rv));
 
   // Flush the queue
@@ -193,8 +211,8 @@ TEST_F(ThreadMetrics, CollectRecursiveMetrics)
 
   // did we get incremented in the docgroup ?
   uint64_t duration = mCounter->GetExecutionDuration();
-  ASSERT_GE(duration, 100000u);
+  ASSERT_GE(duration, 50000u);
 
   // let's make sure we don't count the time spent in recursive calls
-  ASSERT_LT(duration, 150000u);
+  ASSERT_LT(duration, 200000u);
 }
